@@ -1,9 +1,7 @@
 plugins {
+    id 'java'
     id 'application'
-}
-
-application {
-    mainClass = 'org.vosk.demo.DecoderDemo'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 repositories {
@@ -18,6 +16,9 @@ dependencies {
     implementation("com.google.guava:guava:32.0.1-jre")
     implementation "org.bytedeco:javacv-platform:1.5.8"
     implementation "org.bytedeco:ffmpeg-platform:4.4-1.5.8"
+    implementation 'org.xerial:sqlite-jdbc:3.44.1.0'
+    implementation 'org.slf4j:slf4j-api:2.0.12'
+    implementation 'ch.qos.logback:logback-classic:1.5.6'  // реализация SLF4J
 }
 
 java {
@@ -26,14 +27,28 @@ java {
     }
 }
 
+javafx {
+    version = "21"
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics' ]
+}
+
 application {
     mainClass = 'logic.vosk.MicroRecogniseDemo'
+//    mainClass = 'logic.persistence.InitDatabase'
     applicationDefaultJvmArgs = [
             '-Xms5G',
-            '-Xmx5G'
+            '-Xmx5G',
+            "--add-modules=javafx.controls,javafx.fxml,javafx.graphics",
+            "-Dprism.verbose=true"
     ]
 }
 
+tasks.withType(JavaExec) {
+    jvmArgs = [
+            "--module-path", classpath.asPath,
+            "--add-modules", "javafx.controls,javafx.fxml,javafx.graphics"
+    ]
+}
 configurations.all {
     resolutionStrategy {
         force 'net.java.dev.jna:jna:5.13.0'
